feat: Ajustes para query params nas requisições GET.
